@startuml MUHNAC-with-ProposalChat

skinparam linetype ortho
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0

' ============================================================
' Shared Kernel
' ============================================================

package "Shared Kernel" <<Shared Kernel>> {

        class ReferenceNumber <<Value Object>> #e0afea {
        - value: String
        }

        class EmailAddress <<Value Object>> #e0afea {
        - value: String
        }

        class DocumentType <<Value Object>> #e0afea {
        - value: String
        }

        class ObjectReference <<Value Object>> #e0afea {
        - inventoryNumber: String
        - displayTitle: String?
        - objectName: String?
        - briefDescriptionSnapshot: String?
        }

        class MessageAttachment <<Value Object>> #e0afea {
        - documentId: DocumentId
        - fileName: String
        }

        ' --- promoted from User Request ---
        class IntendedUse <<Value Object>> #e0afea {
        - useType: UseType
        - description: String
        }

        enum UseType #e0afea {
        EXHIBITION
        IN_SITU_VISIT
        OTHER
        }

        IntendedUse ..> UseType : useType
}


' ============================================================
' Identity & Access
' ============================================================

package "Identity & Access" <<Bounded Context>> {

        class User <<Aggregate Root>> #87bdd8 {
        - id: UserId
        - name: String
        - email: String
        - passwordHash: String
        }

        class Group <<Aggregate Root>> #87bdd8 {
        - id: GroupId
        - name: GroupName
        }

        class Permission <<Aggregate Root>> #87bdd8 {
        - id: PermissionId
        - userId: UserId
        - groupId: GroupId
        - user: User?
        - group: Group?
        }

        enum GroupName #87bdd8 {
        EXTERNAL
        CURATORIAL
        COLLECTIONS_MANAGEMENT
        DIRECTION
        SYS_ADMIN
        }

        Permission ..> User : userId
        Permission ..> Group : groupId
}


' ============================================================
' User Request
' ============================================================

package "User Request" <<Bounded Context>> {

        class Proposal <<Aggregate Root>> #ffeead {
        - id: ProposalId
        - referenceNumber: ReferenceNumber
        - title: String
        - collectionUseProjectId: CollectionUseProjectId
        - intendedUse: IntendedUse
        - beginDate: LocalDate
        - endDate: LocalDate
        - status: ProposalStatus
        - requestedBy: PermissionId
        - submittedAt: DateTime
        - assignedTo: PermissionId?
        - watchers: List<PermissionId>
        - events: List<ProposalEvent>
        - requestedDocuments: List<RequestedDocument>
        - requestedObjects: List<RequestedObject>
        - documents: List<Document>
        + recordSubmitted(...)
        + assign(...)
        + requestDocuments(...)
        + addRequestedObjects(...)
        + submitDocuments(...)
        + forward(...)
        + referToDirection(...)
        + directionClarify(...)
        + approve(...)
        + reject(...)
        }

        enum ProposalStatus #ffeead {
        SUBMITTED
        PENDING
        APPROVED
        REJECTED
        CANCELLED
        }

        class ProposalEvent <<Value Object>> #ffeead {
        - occurredAt: DateTime
        - type: ProposalEventType
        - triggeredBy: PermissionId
        - note: String?
        }

        enum ProposalEventType #ffeead {
        SUBMITTED
        ASSIGNED
        FORWARDED
        INTENDED_USE_UPDATED
        DOCUMENTS_REQUESTED
        DOCUMENTS_SUBMITTED
        REVIEW_STARTED
        REFERRED_TO_DIRECTION
        DIRECTION_CLARIFIED
        APPROVED
        REJECTED
        CANCELLED
        }

        class RequestedDocument <<Entity>> #ffeead {
        - id: RequestedDocumentId
        - type: DocumentType
        - description: String
        - requestedAt: DateTime
        - requestedBy: PermissionId
        }

        class RequestedObject <<Entity>> #ffeead {
        - id: RequestedObjectId
        - objectReference: ObjectReference
        - category: String
        - description: String
        - requestedAt: DateTime
        - requestedBy: PermissionId
        }

        class Document <<Entity>> #c7ceea {
        - id: DocumentId
        - type: DocumentType
        - fileName: String
        - fileReference: String
        - submittedAt: DateTime
        - submittedBy: PermissionId
        }

        class Conversation <<Aggregate Root>> #96ceb4 {
        - id: ConversationId
        - proposalId: ProposalId
        - messages: List<Message>
        - externalMessageId: String?
        + start(...)
        + addMessage(...)
        }

        class Message <<Entity>> #96ceb4 {
        - id: MessageId
        - sentAt: DateTime
        - sender: EmailAddress
        - recipient: EmailAddress
        - subject: String
        - body: String
        - attachments: List<MessageAttachment>
        }

        Proposal *-- "1..1" IntendedUse
        Proposal *-- "0..*" ProposalEvent
        Proposal *-- "0..*" RequestedDocument
        Proposal *-- "0..*" RequestedObject
        Proposal *-- "0..*" Document

        RequestedDocument *-- DocumentType
        RequestedObject *-- ObjectReference
        Document *-- DocumentType

        Proposal ..> Permission : requestedBy
        Proposal ..> Permission : assignedTo
        Proposal ..> Permission : watcher ids
        Proposal ..> CollectionUseProject : collectionUseProjectId
        ProposalEvent ..> Permission : triggeredBy
        RequestedDocument ..> Permission : requestedBy
        RequestedObject ..> Permission : requestedBy
        Document ..> Permission : submittedBy

        Conversation *-- "1..*" Message
        Conversation ..> Proposal : proposalId
        Message *-- "0..*" MessageAttachment
        Message ..> EmailAddress : sender
        Message ..> EmailAddress : recipient
        MessageAttachment ..> Document : documentId
}


' ============================================================
' Collection Use
' ============================================================

package "Collection Use" <<Bounded Context>> {

        class CollectionUseProject <<Aggregate Root>> #ff6f69 {
        - id: CollectionUseProjectId
        - referenceNumber: ReferenceNumber
        - title: String
        - purpose: String
        - intendedUse: IntendedUse
        - status: UseStatus
        - beginDate: LocalDate
        - endDate: LocalDate
        - requestedBy: PermissionId
        - proposalId: ProposalId?
        - requestNote: String?
        - note: String?
        - result: UseResult?
        - authorisedBy: PermissionId?
        - authorisedAt: DateTime?
        - events: List<UseEvent>
        + recordRequested(...)
        + recordStarted(...)
        + recordCompleted(...)
        + recordCancelled(...)
        }

        enum UseStatus #ff6f69 {
        CREATED
        IN_PROGRESS
        COMPLETED
        CANCELLED
        }

        enum UseResult #ff6f69 {
        COMPLETED
        CANCELLED
        }

        class UseEvent <<Value Object>> #ff6f69 {
        - occurredAt: DateTime
        - type: UseEventType
        - triggeredBy: PermissionId
        - note: String?
        }

        enum UseEventType #ff6f69 {
        REQUESTED
        STARTED
        COMPLETED
        CANCELLED
        }

        class Attachment <<Value Object>> #ffb7b2 {
        - fileReference: String
        - fileName: String
        - mediaType: MediaType
        - uploadedAt: DateTime
        - note: String?
        }

        enum MediaType #ffb7b2 {
        DOCUMENT
        IMAGE
        VIDEO
        OTHER
        }

        class ObjectAccessLog <<Aggregate Root>> #ffb7b2 {
        - id: ObjectAccessLogId
        - referenceNumber : ReferenceNumber
        - collectionUseProjectId: CollectionUseProjectId
        - dateConclusion: DateTime?
        - curator: PermissionId?
        - objects: List<ObjectLogEntry>
        + addObjectLogEntry(...)
        + conclude(...)
        }

        class ObjectLogEntry <<Entity>> #ffb7b2 {
        - id: ObjectLogEntryId
        - objectAccessLogId: ObjectAccessLogId
        - objectReference: ObjectReference
        - numberOfObjects: Int
        - addedAt: DateTime
        - addedBy: PermissionId
        - observations: String?
        - requestedObjectId: RequestedObjectId?
        - attachments: List<Attachment>
        + addAttachment(...)
        + edit(...)
        }


        class ObjectOccurrenceLog <<Aggregate Root>> #ffb7b2 {
        - id: ObjectOccurrenceLogId
        - referenceNumber : ReferenceNumber
        - collectionUseProjectId: CollectionUseProjectId
        - dateConclusion: DateTime?
        - curator: PermissionId?
        - objects: List<ObjectOccurrenceEntry>
        + addObjectOccurrenceEntry(...)
        + conclude(...)
        }


        class ObjectOccurrenceEntry <<Entity>> #ffb7b2 {
        - id: ObjectOccurrenceEntryId
        - objectOccurrenceLogId: ObjectOccurrenceLogId
        - objectReference: ObjectReference
        - numberOfObjects: Int
        - occurrenceDate: DateTime
        - location: String
        - reportedBy: PermissionId
        - detailedDescription: String
        - testimonial: String?
        - requestedObjectId: RequestedObjectId?
        - attachments: List<Attachment>
        + addAttachment(...)
        + edit(...)
        }


        class PublicationLog <<Aggregate Root>> #ffb7b2 {
        - id: PublicationLogId
        - referenceNumber : ReferenceNumber
        - collectionUseProjectId: CollectionUseProjectId
        - curator: PermissionId?
        - entries: List<PublicationLogEntry>
        + addEntry(...)
        }


        class PublicationLogEntry <<Entity>> #ffb7b2 {
        - id: PublicationLogEntryId
        - publicationLogId: PublicationLogId
        - addedAt: DateTime
        - addedBy: PermissionId
        - note: String
        - attachments: List<Attachment>
        + addAttachment(...)
        + edit(...)
        }



        CollectionUseProject *-- ReferenceNumber
        CollectionUseProject *-- "1..1" IntendedUse
        CollectionUseProject *-- "0..*" UseEvent
        CollectionUseProject ..> Proposal : proposalId
        CollectionUseProject ..> Permission : requestedBy
        CollectionUseProject ..> Permission : authorisedBy
        UseEvent ..> Permission : triggeredBy


        ObjectAccessLog "1..1" -- CollectionUseProject : collectionUseProjectId
        ObjectAccessLog *-- "0..*" ObjectLogEntry
        ObjectAccessLog *-- ReferenceNumber
        ObjectAccessLog ..> Permission : curator

        ObjectLogEntry *-- "0..*" Attachment
        ObjectLogEntry *-- "1..1" ObjectReference
        ObjectLogEntry ..> Permission : addedBy
        ObjectLogEntry ..> RequestedObject : requestedObjectId

        ObjectOccurrenceLog "1..1" -- CollectionUseProject : collectionUseProjectId
        ObjectOccurrenceLog *-- "0..*" ObjectOccurrenceEntry
        ObjectOccurrenceLog *-- ReferenceNumber
        ObjectOccurrenceLog ..> Permission : curator

        ObjectOccurrenceEntry *-- "0..*" Attachment
        ObjectOccurrenceEntry *-- "1..1" ObjectReference
        ObjectOccurrenceEntry ..> Permission : reportedBy
        ObjectOccurrenceEntry ..> RequestedObject : requestedObjectId

        PublicationLog "1..1" -- CollectionUseProject : collectionUseProjectId
        PublicationLog *-- "0..*" PublicationLogEntry
        PublicationLog *-- ReferenceNumber
        PublicationLog ..> Permission : curator

        PublicationLogEntry *-- "0..*" Attachment
        PublicationLogEntry ..> Permission : addedBy
}


' ============================================================
' ProposalChat  (separate bounded context, hexagonal)
'   - reads Conversation/Message from User Request via ACL
'   - uses IntendedUse / UseType from Shared Kernel directly
'   - IntendedUseSuggestion is ephemeral (no repository)
' ============================================================

package "ProposalChat" <<Bounded Context>> {

    package "domain" {

        class ConversationContext <<Value Object>> #a0c4ff {
        + focus: FocusMessage
        + proposalSummary: String?
        }

        class FocusMessage <<Value Object>> #a0c4ff {
        + subject: String
        + body: String
        + sender: String
        }

        class IntendedUseSuggestion <<Value Object>> #a0c4ff {
        + useType: UseType
        + description: String
        + confidence: Confidence
        + rationale: String?
        + sourceConversationId: String
        + sourceMessageId: String
        + toIntendedUse(): IntendedUse
        }

        class Confidence <<Value Object>> #a0c4ff {
        + value: Float
        }

        interface ProposalContextPort <<driven port>> #a0c4ff {
        + load(conversationId, messageId): ConversationContext
        }

        interface IntendedUseSuggestionPort <<driven port>> #a0c4ff {
        + suggest(context): IntendedUseSuggestion
        }
    }

    package "application" {

        interface SuggestIntendedUseUseCase <<driving port>> #c4d7ff {
        + handle(cmd): IntendedUseSuggestion
        }

        class SuggestIntendedUseService <<application service>> #c4d7ff {
        - context: ProposalContextPort
        - model: IntendedUseSuggestionPort
        + handle(cmd): IntendedUseSuggestion
        }

        class SuggestIntendedUseCommand <<command>> #c4d7ff {
        + conversationId: String
        + messageId: String
        }
    }

    package "infrastructure" {
        class UserRequestContextAdapter <<ACL adapter>> #e4c1f9
        class LangGraphIntendedUseAdapter <<adapter>> #e4c1f9
    }

    package "presentation" {
        class ProposalChatController <<driving adapter>> #caffbf
    }

    ConversationContext *-- FocusMessage
    IntendedUseSuggestion *-- Confidence

    SuggestIntendedUseService ..|> SuggestIntendedUseUseCase
    SuggestIntendedUseService ..> ProposalContextPort
    SuggestIntendedUseService ..> IntendedUseSuggestionPort
    SuggestIntendedUseService ..> IntendedUseSuggestion
    SuggestIntendedUseService ..> SuggestIntendedUseCommand

    UserRequestContextAdapter ..|> ProposalContextPort
    LangGraphIntendedUseAdapter ..|> IntendedUseSuggestionPort
    ProposalChatController ..> SuggestIntendedUseUseCase
}

' --- cross-context integration ---
IntendedUseSuggestion ..> UseType : useType (Shared Kernel)
IntendedUseSuggestion ..> IntendedUse : toIntendedUse() (Shared Kernel)
UserRequestContextAdapter ..> Conversation : <<ACL>> reads + translates

note as N_ProposalChat
  ProposalChat reads Conversation/Message/Proposal from User Request only
  through an ACL, translating to ConversationContext.
  IntendedUse / UseType come from Shared Kernel without translation.
  IntendedUseSuggestion is ephemeral: no repository, no ProposalEvent.
  Applying a suggestion is a User Request action and records
  INTENDED_USE_UPDATED there, not in ProposalChat.
end note
N_ProposalChat .. UserRequestContextAdapter

@enduml
